--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,87 +1,32 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.15)
+project(IterativeSolver CXX)
 
-project(IterativeSolver LANGUAGES CXX VERSION 1.0)
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
-include(libconfig)
+include(FetchContent)
+FetchContent_Declare(
+        LibraryManager
+        GIT_REPOSITORY https://gitlab+deploy-token-178345:RQZa2rmdwnV7Hdwg8XEq@gitlab.com/molpro/LibraryManager.git
+        GIT_TAG master
+)
+FetchContent_MakeAvailable(LibraryManager)
 
-option(FORTRAN "Whether to build fortran binding" ON)
-option(BENCHMARK "Whether to build benchmark job" OFF)
-option(INTEGER8 "Whether to build for 64-bit fortran integers" ON)
-if (Molpro_SOURCE_DIR)
-    set(FORTRAN ON)
-endif ()
-
-if (BENCHMARK)
-    set(FORTRAN ON)
-endif ()
-
-if (FORTRAN)
-    enable_language(Fortran)
-endif ()
-
-########## Compiler and Build Flags ##########
-
-if (NOT MPI_FOUND)
-    # is the provided compiler an MPI wrapper, or is MPI specified?
-    if (NOT MPI)
-        set(MPI_SKIP_COMPILER_WRAPPER TRUE)
-        set(MPI_SKIP_GUESSING TRUE)
-    endif ()
-    find_package(MPI)
-endif (NOT MPI_FOUND)
-
-if (MPI_MPICXX_FOUND)
-    include_directories(${MPI_CXX_INCLUDE_PATH})
-    set(HAVE_MPI_H ON)
-    add_compile_definitions(HAVE_MPI_H=1)
-    message("MPI build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} Fortran=${CMAKE_Fortran_COMPILER}")
-else ()
-    message("Serial build of ${CMAKE_CURRENT_SOURCE_DIR} for ${CMAKE_PROJECT_NAME} with CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} Fortran=${CMAKE_Fortran_COMPILER}")
-endif (MPI_MPICXX_FOUND)
-
-
-if (FORTRAN)
-    message("Configuring Fortran support for ${CMAKE_CURRENT_SOURCE_DIR}")
-    include(CheckFortranCompilerFlag)
-    if (INTEGER8)
-        foreach (f "-fdefault-integer-8" "-i8")
-            CHECK_Fortran_COMPILER_FLAG(${f} _fortran_flags)
-            if (_fortran_flags)
-                set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${f}")
-            endif ()
-            unset(_fortran_flags CACHE)
-        endforeach ()
-    endif ()
-endif ()
-
-
-########## Dependencies ##########
+LibraryManager_Project(FORTRAN_OPTION MPI_OPTION)
 
 add_subdirectory(dependencies)
 
-########## Targets ##########
-add_subdirectory(lib)
-add_subdirectory(benchmark)
+add_subdirectory(src)
 
-enable_testing()
-add_subdirectory(test)
-add_subdirectory(example)
+if (${CMAKE_PROJECT_NAME} STREQUAL ${PROJECT_NAME})
+    add_subdirectory(examples)
+    add_subdirectory(benchmark)
+    enable_testing()
+    add_subdirectory(test)
+endif ()
 
+# Documentation has to come last to make sure all dependencies have been added
+include(DependencyManagerDocs)
 
-########## Documentation ##########
-
-find_package(Doxygen)
-if (DOXYGEN_FOUND)
-    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY)
-    add_custom_target(${PROJECT_NAME}-doc ALL
-            DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
-            )
-    file(GLOB doxysrc lib/*.h lib/*.F90 example/*.cpp example/*.F90)
-    add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/html/index.html
-            COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-            DEPENDS ${SRC_LIST} ${doxysrc} ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
-            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-            COMMENT "Generating API documentation with Doxygen" VERBATIM
-            )
-endif (DOXYGEN_FOUND)
+DependencyManagerDocs_Add(${PROJECT_NAME}
+        FILES README.md
+        DOC_URL "https://molpro.gitlab.io/IterativeSolver/${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}"
+        DEPENDS Profiler # projects whose documentation has to be built before current project.
+        )
