--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -25,7 +25,7 @@ foreach (fil ${EXAMPLES})
             PROPERTIES
             RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
             )
-    target_link_libraries(${test_name} PUBLIC ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
+    target_link_libraries(${test_name} PUBLIC molpro::${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
     if (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
         target_link_libraries(${test_name} PUBLIC ifcore)
     endif()
@@ -40,8 +40,8 @@ if (BENCHMARK)
             )
     get_dependency(profiler)
     if (MPI_CXX_FOUND)
-        target_link_libraries(LinearEigensystemBenchmarkF PUBLIC ${PROJECT_NAME} Profiler::mpi)
+        target_link_libraries(LinearEigensystemBenchmarkF molpro::PUBLIC ${PROJECT_NAME} Profiler::mpi)
     else ()
-        target_link_libraries(LinearEigensystemBenchmarkF PUBLIC ${PROJECT_NAME} Profiler::serial)
+        target_link_libraries(LinearEigensystemBenchmarkF PUBLIC molpro::${PROJECT_NAME} Profiler::serial)
     endif ()
 endif ()
