--- a/src/molpro/CMakeLists.txt
+++ b/src/molpro/CMakeLists.txt
@@ -26,10 +26,8 @@ LibraryManager_BLAS(${PROJECT_NAME} Intel10_64lp_seq)
 if (MPI_CXX_FOUND)
     target_compile_definitions(${PROJECT_NAME} PUBLIC HAVE_MPI)
     target_link_libraries(${PROJECT_NAME} PUBLIC MPI::MPI_CXX)
-    target_link_libraries(${PROJECT_NAME} PUBLIC Profiler::mpi)
-else ()
-    target_link_libraries(${PROJECT_NAME} PUBLIC Profiler::serial)
 endif ()
+target_link_libraries(${PROJECT_NAME} PUBLIC molpro::Profiler)
 
 LibraryManager_BLAS(${PROJECT_NAME} Intel10_64lp_seq Intel10_64lp)
 if (BLA_VENDOR MATCHES "^Intel10_64lp.*")
