--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,7 @@
-get_dependency(googletest ON)
 include(GoogleTest)
 foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver PagedVector-test OutOfCoreArray-test SimpleVector-test)
     add_executable(${t}.exe ${t}.cpp test.h)
-    target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} gmock_main ${MPI_CXX_LIBRARIES})
+    target_link_libraries(${t}.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)# ${MPI_CXX_LIBRARIES})
     gtest_discover_tests(${t}.exe)
     if (MPI_FOUND)
         add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
