--- a/src/molpro/CMakeLists.txt
+++ b/src/molpro/CMakeLists.txt
@@ -19,15 +19,21 @@ set_target_properties(${PROJECT_NAME} PROPERTIES CXX_EXTENSIONS OFF)
 
 include(DependencyManager)
 DependencyManager_Populate(Profiler)
-DependencyManager_Populate(ppidd)
-
-LibraryManager_BLAS(${PROJECT_NAME} Intel10_64lp_seq)
+DependencyManager_Populate(utilities)
+target_link_libraries(${PROJECT_NAME} PUBLIC molpro::Profiler molpro::utilities)
 
 if (MPI_CXX_FOUND)
-    target_compile_definitions(${PROJECT_NAME} PUBLIC HAVE_MPI)
+    message(STATUS "Building IterativeSolver on MPI")
+    target_compile_definitions(${PROJECT_NAME} PUBLIC HAVE_MPI_H)
     target_link_libraries(${PROJECT_NAME} PUBLIC MPI::MPI_CXX)
+else ()
+    message(STATUS "Building serial IterativeSolver")
 endif ()
-target_link_libraries(${PROJECT_NAME} PUBLIC molpro::Profiler)
+if (TARGET ppidd::ppidd)
+    message(STATUS "Building IterativeSolver on PPIDD library")
+    target_link_libraries(${PROJECT_NAME} PUBLIC ppidd::ppidd)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC HAVE_PPIDD_H)
+endif ()
 
 LibraryManager_BLAS(${PROJECT_NAME} Intel10_64lp_seq Intel10_64lp)
 if (BLA_VENDOR MATCHES "^Intel10_64lp.*")
@@ -37,7 +43,7 @@ endif ()
 if (CMAKE_Fortran_COMPILER AND NOT LAPACK_FOUND)
     find_package(LAPACK REQUIRED)
     target_link_libraries(${PROJECT_NAME} PUBLIC ${LAPACK_LIBRARIES})
-endif()
+endif ()
 
 if (NOT TARGET Eigen3::Eigen)
     message(VERBOSE "Eigen3::Eigen is not yet a target")
