--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -13,3 +13,5 @@ set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" PARENT_SCOPE)
 DependencyManager_Declare(ppidd https://gitlab.com/molpro/ppidd.git)
 
 DependencyManager_Declare(Profiler https://gitlab.com/molpro/profiler.git)
+
+DependencyManager_Declare( utilities https://gitlab+deploy-token-181030:whWoM4qkenzjGjWsFTxj@gitlab.com/molpro/utilities )
