--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,12 @@
+include(FetchContent)
+set(INSTALL_GTEST OFF CACHE BOOL "" FORCE)
+FetchContent_Declare(
+        googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG "release-1.8.1"
+)
+FetchContent_MakeAvailable(googletest)
+
 include(GoogleTest)
 foreach (t IterativeSolver-test IterativeSolver-OOCA-test TestIterativeSolver PagedVector-test OutOfCoreArray-test SimpleVector-test)
     add_executable(${t}.exe ${t}.cpp test.h)
