--- a/src/molpro/CMakeLists.txt
+++ b/src/molpro/CMakeLists.txt
@@ -50,12 +50,6 @@ if (NOT TARGET Eigen3::Eigen)
     find_package(Eigen3 3.3.0 NO_MODULE NO_CMAKE_ENVIRONMENT_PATH NO_CMAKE_PACKAGE_REGISTRY QUIET)
     if (EIGEN3_FOUND)
         message(STATUS "Eigen3 found on system: ${EIGEN3_INCLUDE_DIR}")
-        add_library(eigen INTERFACE)
-        target_include_directories(eigen INTERFACE
-                $<BUILD_INTERFACE:${EIGEN3_INCLUDE_DIR}>
-                $<INSTALL_INTERFACE:${EIGEN3_INCLUDE_DIR}>
-                )
-        add_library(Eigen3::Eigen ALIAS eigen)
     else ()
         if (NOT CMAKE_Fortran_COMPILER)
             message(FATAL_ERROR "Eigen3 cannot be configured from source with FORTRAN=OFF; install it in the system first")
@@ -66,17 +60,71 @@ if (NOT TARGET Eigen3::Eigen)
                 GIT_TAG 3.3.7
                 )
         FetchContent_MakeAvailable(eigen3)
-        add_library(Eigen3::Eigen ALIAS eigen)
         message(STATUS "Eigen3::Eigen not found on system, and downloaded")
-    endif ()
-    if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
-        set(EIGEN_DONT_VECTORIZE ON)
     endif ()
 else ()
     message(STATUS "SymmetryMatrix: Eigen3::Eigen target already defined")
 endif ()
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
+    set(EIGEN_DONT_VECTORIZE ON)
+endif ()
 
 target_link_libraries(${PROJECT_NAME} PUBLIC Eigen3::Eigen)
 if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
-    target_compile_definitions(${PROJECT_NAME} -DEIGEN_DONT_VECTORIZE)
+    target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE)
 endif ()
+
+## Get all propreties that cmake supports
+#execute_process(COMMAND cmake --help-property-list OUTPUT_VARIABLE CMAKE_PROPERTY_LIST)
+#
+## Convert command output into a CMake list
+#STRING(REGEX REPLACE ";" "\\\\;" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
+#STRING(REGEX REPLACE "\n" ";" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
+## Fix https://stackoverflow.com/questions/32197663/how-can-i-remove-the-the-location-property-may-not-be-read-from-target-error-i
+#list(FILTER CMAKE_PROPERTY_LIST EXCLUDE REGEX "^LOCATION$|^LOCATION_|_LOCATION$")
+## For some reason, "TYPE" shows up twice - others might too?
+#list(REMOVE_DUPLICATES CMAKE_PROPERTY_LIST)
+#
+## build whitelist by filtering down from CMAKE_PROPERTY_LIST in case cmake is
+## a different version, and one of our hardcoded whitelisted properties
+## doesn't exist!
+#unset(CMAKE_WHITELISTED_PROPERTY_LIST)
+#foreach(prop ${CMAKE_PROPERTY_LIST})
+#    if(prop MATCHES "^(INTERFACE|[_a-z]|IMPORTED_LIBNAME_|MAP_IMPORTED_CONFIG_)|^(COMPATIBLE_INTERFACE_(BOOL|NUMBER_MAX|NUMBER_MIN|STRING)|EXPORT_NAME|IMPORTED(_GLOBAL|_CONFIGURATIONS|_LIBNAME)?|NAME|TYPE|NO_SYSTEM_FROM_IMPORTED)$")
+#        list(APPEND CMAKE_WHITELISTED_PROPERTY_LIST ${prop})
+#    endif()
+#endforeach(prop)
+#
+#function(print_properties)
+#    message ("CMAKE_PROPERTY_LIST = ${CMAKE_PROPERTY_LIST}")
+#endfunction(print_properties)
+#
+#function(print_whitelisted_properties)
+#    message ("CMAKE_WHITELISTED_PROPERTY_LIST = ${CMAKE_WHITELISTED_PROPERTY_LIST}")
+#endfunction(print_whitelisted_properties)
+#
+#function(print_target_properties tgt)
+#    if(NOT TARGET ${tgt})
+#        message("There is no target named '${tgt}'")
+#        return()
+#    endif()
+#
+#    get_target_property(target_type ${tgt} TYPE)
+#    if(target_type STREQUAL "INTERFACE_LIBRARY")
+#        set(PROP_LIST ${CMAKE_WHITELISTED_PROPERTY_LIST})
+#    else()
+#        set(PROP_LIST ${CMAKE_PROPERTY_LIST})
+#    endif()
+#
+#    foreach (prop ${PROP_LIST})
+#        string(REPLACE "<CONFIG>" "${CMAKE_BUILD_TYPE}" prop ${prop})
+#        # message ("Checking ${prop}")
+#        get_property(propval TARGET ${tgt} PROPERTY ${prop} SET)
+#        if (propval)
+#            get_target_property(propval ${tgt} ${prop})
+#            message ("${tgt} ${prop} = ${propval}")
+#        endif()
+#    endforeach(prop)
+#endfunction(print_target_properties)
+#print_target_properties(Eigen3::Eigen)
+#print_target_properties(${PROJECT_NAME})
