--- a/src/molpro/CMakeLists.txt
+++ b/src/molpro/CMakeLists.txt
@@ -36,6 +36,10 @@ if (TARGET ppidd::ppidd)
 endif ()
 
 LibraryManager_BLAS(${PROJECT_NAME} Intel10_64lp_seq Intel10_64lp)
+message(STATUS "BLA_VENDOR=${BLA_VENDOR}")
+if(APPLE) # should be inside BLA_VENDOR TEST BELOW
+    target_link_options(${PROJECT_NAME} PUBLIC "-Wl,-rpath,$ENV{MKLROOT}/lib")
+endif()
 if (BLA_VENDOR MATCHES "^Intel10_64lp.*")
     message(STATUS "Eigen will use MKL")
     target_compile_definitions(${PROJECT_NAME} PUBLIC EIGEN_USE_MKL_ALL)
@@ -74,57 +78,58 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "PGI")
     target_compile_definitions(${PROJECT_NAME} PUBLIC -DEIGEN_DONT_VECTORIZE)
 endif ()
 
-## Get all propreties that cmake supports
-#execute_process(COMMAND cmake --help-property-list OUTPUT_VARIABLE CMAKE_PROPERTY_LIST)
-#
-## Convert command output into a CMake list
-#STRING(REGEX REPLACE ";" "\\\\;" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
-#STRING(REGEX REPLACE "\n" ";" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
-## Fix https://stackoverflow.com/questions/32197663/how-can-i-remove-the-the-location-property-may-not-be-read-from-target-error-i
-#list(FILTER CMAKE_PROPERTY_LIST EXCLUDE REGEX "^LOCATION$|^LOCATION_|_LOCATION$")
-## For some reason, "TYPE" shows up twice - others might too?
-#list(REMOVE_DUPLICATES CMAKE_PROPERTY_LIST)
-#
-## build whitelist by filtering down from CMAKE_PROPERTY_LIST in case cmake is
-## a different version, and one of our hardcoded whitelisted properties
-## doesn't exist!
-#unset(CMAKE_WHITELISTED_PROPERTY_LIST)
-#foreach(prop ${CMAKE_PROPERTY_LIST})
-#    if(prop MATCHES "^(INTERFACE|[_a-z]|IMPORTED_LIBNAME_|MAP_IMPORTED_CONFIG_)|^(COMPATIBLE_INTERFACE_(BOOL|NUMBER_MAX|NUMBER_MIN|STRING)|EXPORT_NAME|IMPORTED(_GLOBAL|_CONFIGURATIONS|_LIBNAME)?|NAME|TYPE|NO_SYSTEM_FROM_IMPORTED)$")
-#        list(APPEND CMAKE_WHITELISTED_PROPERTY_LIST ${prop})
-#    endif()
-#endforeach(prop)
-#
-#function(print_properties)
-#    message ("CMAKE_PROPERTY_LIST = ${CMAKE_PROPERTY_LIST}")
-#endfunction(print_properties)
-#
-#function(print_whitelisted_properties)
-#    message ("CMAKE_WHITELISTED_PROPERTY_LIST = ${CMAKE_WHITELISTED_PROPERTY_LIST}")
-#endfunction(print_whitelisted_properties)
-#
-#function(print_target_properties tgt)
-#    if(NOT TARGET ${tgt})
-#        message("There is no target named '${tgt}'")
-#        return()
-#    endif()
-#
-#    get_target_property(target_type ${tgt} TYPE)
-#    if(target_type STREQUAL "INTERFACE_LIBRARY")
-#        set(PROP_LIST ${CMAKE_WHITELISTED_PROPERTY_LIST})
-#    else()
-#        set(PROP_LIST ${CMAKE_PROPERTY_LIST})
-#    endif()
-#
-#    foreach (prop ${PROP_LIST})
-#        string(REPLACE "<CONFIG>" "${CMAKE_BUILD_TYPE}" prop ${prop})
-#        # message ("Checking ${prop}")
-#        get_property(propval TARGET ${tgt} PROPERTY ${prop} SET)
-#        if (propval)
-#            get_target_property(propval ${tgt} ${prop})
-#            message ("${tgt} ${prop} = ${propval}")
-#        endif()
-#    endforeach(prop)
-#endfunction(print_target_properties)
+# Get all propreties that cmake supports
+execute_process(COMMAND cmake --help-property-list OUTPUT_VARIABLE CMAKE_PROPERTY_LIST)
+
+# Convert command output into a CMake list
+STRING(REGEX REPLACE ";" "\\\\;" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
+STRING(REGEX REPLACE "\n" ";" CMAKE_PROPERTY_LIST "${CMAKE_PROPERTY_LIST}")
+# Fix https://stackoverflow.com/questions/32197663/how-can-i-remove-the-the-location-property-may-not-be-read-from-target-error-i
+list(FILTER CMAKE_PROPERTY_LIST EXCLUDE REGEX "^LOCATION$|^LOCATION_|_LOCATION$")
+# For some reason, "TYPE" shows up twice - others might too?
+list(REMOVE_DUPLICATES CMAKE_PROPERTY_LIST)
+
+# build whitelist by filtering down from CMAKE_PROPERTY_LIST in case cmake is
+# a different version, and one of our hardcoded whitelisted properties
+# doesn't exist!
+unset(CMAKE_WHITELISTED_PROPERTY_LIST)
+foreach(prop ${CMAKE_PROPERTY_LIST})
+    if(prop MATCHES "^(INTERFACE|[_a-z]|IMPORTED_LIBNAME_|MAP_IMPORTED_CONFIG_)|^(COMPATIBLE_INTERFACE_(BOOL|NUMBER_MAX|NUMBER_MIN|STRING)|EXPORT_NAME|IMPORTED(_GLOBAL|_CONFIGURATIONS|_LIBNAME)?|NAME|TYPE|NO_SYSTEM_FROM_IMPORTED)$")
+        list(APPEND CMAKE_WHITELISTED_PROPERTY_LIST ${prop})
+    endif()
+endforeach(prop)
+
+function(print_properties)
+    message ("CMAKE_PROPERTY_LIST = ${CMAKE_PROPERTY_LIST}")
+endfunction(print_properties)
+
+function(print_whitelisted_properties)
+    message ("CMAKE_WHITELISTED_PROPERTY_LIST = ${CMAKE_WHITELISTED_PROPERTY_LIST}")
+endfunction(print_whitelisted_properties)
+
+function(print_target_properties tgt)
+    if(NOT TARGET ${tgt})
+        message("There is no target named '${tgt}'")
+        return()
+    endif()
+
+    get_target_property(target_type ${tgt} TYPE)
+    if(target_type STREQUAL "INTERFACE_LIBRARY")
+        set(PROP_LIST ${CMAKE_WHITELISTED_PROPERTY_LIST})
+    else()
+        set(PROP_LIST ${CMAKE_PROPERTY_LIST})
+    endif()
+
+    foreach (prop ${PROP_LIST})
+        string(REPLACE "<CONFIG>" "${CMAKE_BUILD_TYPE}" prop ${prop})
+        # message ("Checking ${prop}")
+        get_property(propval TARGET ${tgt} PROPERTY ${prop} SET)
+        if (propval)
+            get_target_property(propval ${tgt} ${prop})
+            message ("${tgt} ${prop} = ${propval}")
+        endif()
+    endforeach(prop)
+endfunction(print_target_properties)
+print_target_properties(BLAS::BLAS)
 #print_target_properties(Eigen3::Eigen)
-#print_target_properties(${PROJECT_NAME})
+print_target_properties(${PROJECT_NAME})
