remove unnecessary options in find_package(Eigen3)

--- a/src/molpro/CMakeLists.txt
+++ b/src/molpro/CMakeLists.txt
@@ -43,9 +43,9 @@ endif ()
 
 if (NOT TARGET Eigen3::Eigen)
     message(VERBOSE "Eigen3::Eigen is not yet a target")
-    find_package(Eigen3 3.3.0 NO_MODULE NO_CMAKE_ENVIRONMENT_PATH NO_CMAKE_PACKAGE_REGISTRY QUIET)
+    find_package(Eigen3 3.3.0)
     if (EIGEN3_FOUND)
-        message(STATUS "Eigen3 found on system: ${EIGEN3_INCLUDE_DIR}")
+        message(STATUS "Eigen3 found on system")
     else ()
         if (NOT CMAKE_Fortran_COMPILER)
             message(FATAL_ERROR "Eigen3 cannot be configured from source with FORTRAN=OFF; install it in the system first")
