use FORTRAN option instead of CMAKE_Fortran_COMPILER

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,4 @@
-if (CMAKE_Fortran_COMPILER_ID
+if (FORTRAN
     AND NOT CMAKE_Fortran_COMPILER_ID STREQUAL "Intel"  # avoid the challenge of linking C++ and Fortran with Intel
 )
     set(ITERATIVESOLVER_FORTRAN_EXAMPLES
@@ -26,13 +26,13 @@ foreach (fil ${EXAMPLES})
             RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}
             )
     target_link_libraries(${test_name} PUBLIC molpro::${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
-    if (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
+    if (FORTRAN AND CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
         target_link_libraries(${test_name} PUBLIC ifcore)
     endif()
     add_test(${nam} ${PROJECT_BINARY_DIR}/${test_name})
 endforeach ()
 
-if (BENCHMARK)
+if (BENCHMARK AND FORTRAN)
     add_executable(LinearEigensystemBenchmarkF LinearEigensystemBenchmarkF.F90)
     set_target_properties(LinearEigensystemBenchmarkF
             PROPERTIES
