--- a/src/molpro/linalg/CMakeLists.txt
+++ b/src/molpro/linalg/CMakeLists.txt
@@ -43,7 +43,7 @@ if (NOT TARGET Eigen3::Eigen)
     if (EIGEN3_FOUND)
         message(STATUS "Eigen3 found on system")
     else ()
-        if (NOT CMAKE_Fortran_COMPILER)
+        if (NOT FORTRAN)
             message(FATAL_ERROR "Eigen3 cannot be configured from source with FORTRAN=OFF; install it in the system first")
         endif ()
         include(FetchContent)
