rename Array class to ArrayGA

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -1,4 +1,4 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES Array.cpp
-        PUBLIC_HEADER Array.h
+        SOURCES ArrayGA.cpp
+        PUBLIC_HEADER ArrayGA.h
         )
