added Array.h with typedef to Array implementation, and options to choose the type

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -1,4 +1,14 @@
 LibraryManager_Append(${PROJECT_NAME}
         SOURCES ArrayGA.cpp
-        PUBLIC_HEADER ArrayGA.h
+        PUBLIC_HEADER Array.h ArrayGA.h
         )
+
+if (GCI_ARRAY_MPI3)
+    message(STATUS "Building gci with MPI3 Array")
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GCI_ARRAY_ArrayMPI3)
+elseif (GCI_ARRAY_GA)
+    message(STATUS "Building gci with GA SharedCounter")
+    target_compile_definitions(${PROJECT_NAME} PUBLIC GCI_ARRAY_ArrayGA)
+else ()
+    message(FATAL_ERROR "Array type not specified, turn on one of the options: GCI_ARRAY_MPI3, GCI_ARRAY_GA")
+endif ()
