made ArrayBase abstract but note pure and implemented everything that only needs local buffer
Derivatives will need to implement allocation, access to local buffer, and RMA operations

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -1,6 +1,6 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES ArrayGA.cpp
-        PUBLIC_HEADER Array.h ArrayBase.h ArrayGA.h
+        SOURCES ArrayGA.cpp ArrayBase.cpp util.cpp
+        PUBLIC_HEADER Array.h ArrayBase.h ArrayGA.h util.h
         )
 
 if (GCI_ARRAY_MPI3)
