implemented unit tests for DistrArrayMPI3, fixed sync. Tests failing!

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -7,7 +7,7 @@ if (GCI_ARRAY_MPI3)
     message(STATUS "Building gci with MPI3 Array")
     target_compile_definitions(${PROJECT_NAME} PUBLIC GCI_ARRAY_ArrayMPI3)
 elseif (GCI_ARRAY_GA)
-    message(STATUS "Building gci with GA SharedCounter")
+    message(STATUS "Building gci with GA distributed array")
     target_compile_definitions(${PROJECT_NAME} PUBLIC GCI_ARRAY_ArrayGA)
 else ()
     message(FATAL_ERROR "Array type not specified, turn on one of the options: GCI_ARRAY_MPI3, GCI_ARRAY_GA")
