rename files gciArray.* to Array.*

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -1,4 +1,4 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES gciArray.cpp
-        PUBLIC_HEADER gciArray.h
+        SOURCES Array.cpp
+        PUBLIC_HEADER Array.h
         )
