implemented construction/destruction of DistrArrayMPI3

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -1,6 +1,6 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES ArrayGA.cpp DistrArray.cpp DistrArrayGA.cpp util.cpp
-        PUBLIC_HEADER Array.h DistrArray.h ArrayGA.h DistrArrayGA.h util.h
+        SOURCES ArrayGA.cpp DistrArray.cpp DistrArrayGA.cpp DistrArrayMPI3.cpp util.cpp
+        PUBLIC_HEADER Array.h DistrArray.h ArrayGA.h DistrArrayGA.h DistrArrayMPI3.h util.h
         )
 
 if (GCI_ARRAY_MPI3)
