--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -1,14 +1,17 @@
 LibraryManager_Append(${PROJECT_NAME}
-        SOURCES ArrayGA.cpp DistrArray.cpp DistrArrayGA.cpp DistrArrayMPI3.cpp util.cpp
-        PUBLIC_HEADER Array.h DistrArray.h ArrayGA.h DistrArrayGA.h DistrArrayMPI3.h util.h
+        SOURCES DistrArray.cpp util.cpp
+        PUBLIC_HEADER DistrArray.h util.h
         )
 
-if (GCI_ARRAY_MPI3)
-    message(STATUS "Building gci with MPI3 Array")
-    target_compile_definitions(${PROJECT_NAME} PUBLIC GCI_ARRAY_ArrayMPI3)
-elseif (GCI_ARRAY_GA)
-    message(STATUS "Building gci with GA distributed array")
-    target_compile_definitions(${PROJECT_NAME} PUBLIC GCI_ARRAY_ArrayGA)
-else ()
-    message(FATAL_ERROR "Array type not specified, turn on one of the options: GCI_ARRAY_MPI3, GCI_ARRAY_GA")
+if (LINEARALGEBRA_ARRAY_MPI3)
+    message(STATUS "Building ${PROJECT_NAME} with MPI3 Array")
+    target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_ArrayMPI3)
+    LibraryManager_Append(${PROJECT_NAME} SOURCES DistrArrayMPI3.cpp PUBLIC_HEADER DistrArrayMPI3.h)
+endif ()
+
+if (LINEARALGEBRA_ARRAY_GA)
+    message(STATUS "Building ${PROJECT_NAME} with GA distributed array")
+    target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_ArrayGA)
+    LibraryManager_Append(${PROJECT_NAME} SOURCES DistrArrayGA.cpp PUBLIC_HEADER DistrArrayGA.h)
+    target_link_libraries(${PROJECT_NAME} PUBLIC ga::ga)
 endif ()
