moved util tests from testDistrArray.cpp to testutil.cpp

--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_executable(test-${PROJECT_NAME}-parallel
         main.cpp
+        testutil.cpp
         testDistrArray.cpp
         )
 target_link_libraries(test-${PROJECT_NAME}-parallel PUBLIC molpro::${PROJECT_NAME} gmock_main)
