declared HDF5Handle for opening/closing hdf5 files and groups

--- a/src/molpro/linalg/array/CMakeLists.txt
+++ b/src/molpro/linalg/array/CMakeLists.txt
@@ -6,14 +6,27 @@ if (MPI)
 
     if (LINEARALGEBRA_ARRAY_MPI3)
         message(STATUS "Building ${PROJECT_NAME} with MPI3 Array")
-        target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_ArrayMPI3)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_MPI3)
         LibraryManager_Append(${PROJECT_NAME} SOURCES DistrArrayMPI3.cpp PUBLIC_HEADER DistrArrayMPI3.h)
     endif ()
 
     if (LINEARALGEBRA_ARRAY_GA)
         message(STATUS "Building ${PROJECT_NAME} with GA distributed array")
-        target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_ArrayGA)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_GA)
         LibraryManager_Append(${PROJECT_NAME} SOURCES DistrArrayGA.cpp PUBLIC_HEADER DistrArrayGA.h)
         target_link_libraries(${PROJECT_NAME} PUBLIC ga::ga)
+    endif ()
+
+    if (LINEARALGEBRA_ARRAY_HDF5)
+        message(STATUS "Building ${PROJECT_NAME} with MPI3 Array")
+        set(HDF5_PREFER_PARALLEL ON)
+        find_package(HDF5 REQUIRED COMPONENTS C)
+        target_link_libraries(${PROJECT_NAME} PUBLIC ${HDF5_LIBRARIES})
+        target_include_directories(${PROJECT_NAME} PUBLIC ${HDF5_INCLUDE_DIRS})
+        target_compile_definitions(${PROJECT_NAME} PUBLIC ${HDF5_DEFINITIONS})
+        target_compile_definitions(${PROJECT_NAME} PUBLIC LINEARALGEBRA_ARRAY_HDF5)
+        LibraryManager_Append(${PROJECT_NAME}
+                SOURCES HDF5Handle.cpp DistrArrayHDF5.cpp
+                PUBLIC_HEADER HDF5Handle.h DistrArrayHDF5.h)
     endif ()
 endif ()
