--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ LibraryManager_Project(FORTRAN_OPTION MPI_OPTION)
 option(PPIDD "Whether to build on PPIDD" OFF)
 option(LINEARALGEBRA_ARRAY_MPI3 "Build with MPI3 implementation of distributed array" ON)
 option(LINEARALGEBRA_ARRAY_GA "Build with GA implementation of distributed array" ON)
+option(LINEARALGEBRA_ARRAY_HDF5 "Build with HDF5 implementation of distributed array" ON)
 ##############################
 
 
