--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -1,4 +1,9 @@
 if (MPI)
+    file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
+    foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
+        configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
+    endforeach ()
+
     add_executable(test-${PROJECT_NAME}-parallel
             main.cpp
             testutil.cpp
@@ -8,7 +13,7 @@ if (MPI)
             testHDF5Handle.cpp
             )
     target_link_libraries(test-${PROJECT_NAME}-parallel PUBLIC molpro::${PROJECT_NAME} gmock_main)
-    target_compile_definitions(test-${PROJECT_NAME}-parallel PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_SOURCE_DIR}/data\"")
+    target_compile_definitions(test-${PROJECT_NAME}-parallel PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
     gtest_discover_tests(test-${PROJECT_NAME}-parallel)
 
     add_test(NAME test-${PROJECT_NAME}-parallel
