moved HDF5Handle tests out of parallel tests

--- a/test/array/CMakeLists.txt
+++ b/test/array/CMakeLists.txt
@@ -1,14 +1,16 @@
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
+foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
+    configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
+endforeach ()
+add_executable(test-${PROJECT_NAME}-HDF5Handle.exe testHDF5Handle.cpp)
+target_link_libraries(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC molpro::${PROJECT_NAME} gmock_main)
+target_compile_definitions(test-${PROJECT_NAME}-HDF5Handle.exe PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
+gtest_discover_tests(test-${PROJECT_NAME}-HDF5Handle.exe)
 if (MPI)
-    file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/data)
-    foreach (fil empty_file inner_group_dataset.hdf5 single_dataset.hdf5)
-        configure_file("data/${fil}" "${CMAKE_CURRENT_BINARY_DIR}/data/${file}" COPYONLY)
-    endforeach ()
-
     add_executable(test-${PROJECT_NAME}-parallel
             main.cpp
             testutil.cpp
             testDistrArray.h
-            testHDF5Handle.cpp
             )
     if (LINEARALGEBRA_ARRAY_MPI3)
         target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayMPI3.cpp)
@@ -17,7 +19,6 @@ if (MPI)
         target_sources(test-${PROJECT_NAME}-parallel PRIVATE testDistrArrayGA.cpp)
     endif ()
     target_link_libraries(test-${PROJECT_NAME}-parallel PUBLIC molpro::${PROJECT_NAME} gmock_main)
-    target_compile_definitions(test-${PROJECT_NAME}-parallel PUBLIC "ARRAY_DATA=\"${CMAKE_CURRENT_BINARY_DIR}/data\"")
     gtest_discover_tests(test-${PROJECT_NAME}-parallel)
 
     add_test(NAME test-${PROJECT_NAME}-parallel
